<?xml version="1.0"?>
<package format="2">
  <name>littleslam_ros2</name>
  <version>0.0.0</version>
  <description>The littleslam ros2 package</description>

  <maintainer email="ryohei.sasaki@akane.waseda.jp">sasaki</maintainer>

  <license>MPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl-conversions</build_depend>

  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>pcl-conversions</build_export_depend>
  
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>class_loader</exec_depend>
  <exec_depend>pcl-conversions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
